# zk-instant-claim

./: .env.example  .gitignore  Cargo.toml  instant-fetch.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: package.json
backend/src/: config.ts  index.ts
backend/src/routes/: claim.ts  health.ts
backend/src/services/: noir-prover.ts  xion-client.ts  zkfetch.ts
circuit/: Nargo.toml  Prover.toml
circuit/src/: main.nr
contracts/: Cargo.toml
contracts/src/: contract.rs  error.rs  msg.rs  proto.rs  state.rs  verifier.rs
frontend/: next.config.mjs  package.json  tsconfig.tsbuildinfo
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/claim/[id]/: page.tsx
frontend/src/components/: ClaimForm.tsx  ProofProgress.tsx
frontend/src/hooks/: useClaim.ts
frontend/src/lib/: api.ts
scripts/: gusto-exchange.mjs  gusto-oauth.mjs
zkpay-handler/: Cargo.toml
zkpay-handler/src/: contract.rs  error.rs  msg.rs  state.rs
